# guru

./: .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README  README.md  WorkLearnProblem.hpp  aamas.py  analyze.py  environment.yml  exp.py  history.py  launch  make_pomdp.py  param.py  policy.py  pomdp.py  pomdpsol.cpp  pypomdp.py  requirements.txt  run  simulator.py  solve1.cpp  test.sh  util.py  viz_app.py  viz_app_config.py  work_learn_problem.py  zmdp_util.py
config/: classes2-20_80-lose0.01_cost_0.000001.json  classes2-20_80-lose0.01_cost_0.000001_pen1.json  classes2-20_80-lose0.01_cost_0.000001_pen2.json  classes2-20_80-lose0.01_cost_0.000001_pen3.json  classes2-20_80-lose0.01_cost_0.000001_pen9.json  classes2-20_80.json  classes2-20_80_cost_0.000001.json  classes2-20_80_cost_0.000001_pen1.json  classes2-20_80_cost_0.000001_pen100.json  exp1  (+49 more)
test/: CMakeLists.txt  test_analyze.py  test_param.py  test_policy.py  test_pomdp.py  test_work_learn_problem.py  util_tests.cpp
test/data/: 0-0-ait-d0.990-h50.policy  1sk-acc-p_s0.2.json  2sk-acc-p_s0.2.json  zmdp-term3.policy
test/data/sample_res/: zmdp-discount_0.99-timeout_60-eps_1div(0.1*w+1)-HyperParamsUnknownRatio_timings.csv  zmdp-discount_0.99-timeout_60-teach_first-teach_type_tell-n_0-test_and_boot-n_work_20-accuracy_0.8-n_test_4_model.csv  zmdp-discount_0.99-timeout_60-teach_first-teach_type_tell-n_0-test_and_boot-n_work_20-accuracy_0.8-n_test_4_names.csv  zmdp-discount_0.99-timeout_60-teach_first-teach_type_tell-n_0-test_and_boot-n_work_20-accuracy_0.8-n_test_4_timings.csv
(+6 files in other folders)
